plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'maven-publish'
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

version = "mc${archive_minecraft_version}-Fabric-${mod_version}"
group = project.maven_group
var realVersion = project.mod_version + '+fabric'

base {
    archivesName = project.archives_base_name
}

repositories {
    maven {
        // location of the maven that hosts JEI files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven { url "https://maven.shedaniel.me/" }
    maven { url "https://maven.terraformersmc.com/releases/" }
    maven { url "https://maven.terraformersmc.com/" }
    maven {
        url = "https://mvn.devos.one/snapshots/"
    }
    maven {
        // saps.dev Maven (KubeJS and Rhino)
        url = "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
}

loom {
    accessWidenerPath = file("src/main/resources/${project.mod_id}.accesswidener")
    enableTransitiveAccessWideners = false
}

fabricApi {
    configureDataGeneration() {
        modId = project.mod_id
        client = true
        outputDirectory = file("src/generated/resources")
        createSourceSet = true
        strictValidation = true
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

//    implementation("dev.architectury:architectury-fabric:${project.architectury_version}")
//    api("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
//        exclude(group: "net.fabricmc.fabric-api")
//    }
    implementation "com.terraformersmc:modmenu:${project.modmenu_version}"

//    implementation "me.shedaniel:RoughlyEnoughItems-fabric:${project.rei_version}"

    // https://modrinth.com/mod/kiwi/versions
//    implementation annotationProcessor("maven.modrinth:kiwi:${project.kiwi_version}+fabric")
    implementation fileTree(dir: "libs", include: ["*.jar"])
    annotationProcessor fileTree(dir: "libs", include: ["*.jar"])

//    compileOnlyApi "mezz.jei:jei-${minecraft_version}-fabric-api:${jei_version}"
    implementation "mezz.jei:jei-${minecraft_version}-fabric:${jei_version}"

    // https://modrinth.com/mod/jade/versions
    implementation "maven.modrinth:jade:${jade_version}+fabric"

    implementation 'com.google.errorprone:error_prone_annotations:2.36.0'

//    compileOnly "dev.latvian.mods:kubejs-neoforge:${kubejs_version}"

//    compileOnly "dev.emi:emi-fabric:${emi_version}:api"
//    implementation "dev.emi:emi-fabric:${emi_version}"
}

processResources {
    inputs.property "version", realVersion

    filesMatching("fabric.mod.json") {
        expand "version": realVersion
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
    it.options.release = 25
//    it.options.compilerArgs.add("-Akiwi.clientOnlyMod")
}

java {
//    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    exclude("/assets/${project.mod_id}/lang/en_us.existing.json")
    exclude("/data/${project.mod_id}/lychee_fragment")
    exclude("/data/${project.mod_id}/predicate")
    exclude("/data/${project.mod_id}/recipe")
    exclude("/snownee/${project.mod_id}/datagen/LycheeDataGen.class")
    exclude("/snownee/${project.mod_id}/datagen/TestRecipeProvider.class")

    exclude '**/*.py'
    exclude '**/*.zip'
    from("LICENSE") {
        rename { "${it}_${project.archives_base_name}" }
    }
}

configurations.configureEach {
    resolutionStrategy {
        force "dev.architectury:architectury-fabric:${project.architectury_version}"
    }
}

publishMods {
    file = jar.archiveFile
    changelog = file('CHANGELOG.md').exists() ? file('CHANGELOG.md').text : ''
    type = ['release': STABLE, 'beta': BETA, 'alpha': ALPHA][release_type]
    modLoaders.add("fabric")
    modLoaders.add("quilt")
    displayName = "[Fabric ${supported_version}] ${mod_version}"
    version = realVersion

    curseforge {
        projectId = "574650"
        accessToken = providers.environmentVariable("CURSE_TOKEN")
        minecraftVersions.add(minecraft_version)
        requires("kiwi-fabric")
        optional("cloth-config")
    }
    modrinth {
        projectId = "TdN6LxjM"
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        minecraftVersions.add(minecraft_version)
        requires("kiwi")
        optional("cloth-config")
    }
}